# Capstone_NN

./: CMakeLists.txt  NNmain.cpp  OpenNN.sln  README.md  imageReaderMain.cpp
Include/: ConfigFileParser.h  ImageReader.h
Link/: ConfigFileParser.cpp  ImageReader.cpp
OpenNN-master/opennn/: CMakeLists.txt  ant_colony_optimization.h  bounding_layer.h  conditions_layer.h  conjugate_gradient.h  cross_entropy_error.h  data_set.h  error_term.h  f1_score_optimization_threshold.h  genetic_algorithm.h  golden_section_order.h  growing_inputs.h  incremental_order.h  independent_parameters.h  informedness_optimization_threshold.h  inputs.h  inputs_selection_algorithm.h  instances.h  kappa_coefficient_optimization_threshold.h  levenberg_marquardt_algorithm.h  loss_index.h  mean_squared_error.h  minkowski_error.h  missing_values.h  model_selection.h  multilayer_perceptron.h  neural_network.h  neural_parameters_norm.h  newton_method.h  normalized_squared_error.h  numerical_differentiation.h  numerical_integration.h  order_selection_algorithm.h  ordinary_differential_equations.h  outputs.h  outputs_integrals.h  performance_term.h  principal_components_layer.h  probabilistic_layer.h  pruning_inputs.h  (+18 more)
Results/: dataSet.xml  expression.txt  neural_net1.xml  training_strategy.xml
data/: mnist_test_10.csv
